fix: tidy navbar spacing

--- a/src/styles/about/clock.module.css
+++ b/src/styles/about/clock.module.css
@@ -6,7 +6,7 @@
     border-radius: var(--radius-xs);
     border: none;
     padding: 0 var(--space-sm);
-    margin-right: 0.3rem;
+    margin-right: -0.3rem;
     font-size: 0.85rem;
     font-variation-settings: var(--var-md);
     height: 1.5rem;
