--- a/src/styles/ui/menu.module.css
+++ b/src/styles/ui/menu.module.css
@@ -24,7 +24,7 @@
     display: flex;
     align-items: center;
 
-    padding: 0 var(--space-md);
+    padding: 0 0.3rem;
 
     /* Needed so the ::before blur isolates correctly */
     isolation: isolate;
@@ -70,7 +70,7 @@
 }
 
 .leftGroup {
-    gap: var(--space-md);
+    gap: var(--space-xxs);
 }
 
 .rightGroup {
